# chip-8-emulator

./: CMakeLists.txt  README.md
inc/: chip8.h
src/: chip8.cpp  main.cpp
